<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_primary"
    app:layout_collapseMode="pin">

    <com.eltonjhony.eventapp.presentation.views.ToolbarView
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="pin" />

</FrameLayout>